Fixed alignment issues with the H1 on the landing page. Improved alignment of nav links.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -84,13 +84,22 @@ a {
 /* Line up the nav items horizontally */
 .menu li {
     display: inline-block;
-    margin: 0 30px;
+}
+
+.contact-link {
+    margin-left: 60px;
+}
+
+.landing-wrapper {
+    max-width: 700px;
+    width: 60%;
+    margin: 5% auto 0;
 }
 
 .welcome-head {
     margin: 5% auto 0;
-    max-width: 700px;
-    width: 60%;
+    /*max-width: 700px;*/
+    /*width: 60%;*/
 }
 
 h1 {
@@ -101,7 +110,7 @@ h1 {
 
 .copy {
     margin: 0 auto;
-    max-width: 700px;
+    /*max-width: 700px;*/
 }
 
 p {
@@ -207,6 +216,11 @@ p {
         padding-top: 15%;
 }
 
+.contact-copy {
+    margin: 0 auto;
+    max-width: 700px;
+}
+
 .highlight-black {
     color: #474444;
 }
@@ -286,10 +300,4 @@ p {
         max-width: 70%;
     }
 }
-
-/* ** ** ** ** **
-**
-** GALAGA
-**
-** ** ** ** ** */
 
